feat: Add file upload for specific requirements
Integrates Mammoth.js for reading .docx files and supports plain .txt files. Users can now upload documents to populate the "specific requirements" field, streamlining the test generation process.

Removes unnecessary Vite base configuration.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@google/genai": "^1.30.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
-    "docx": "8.5.0"
+    "docx": "8.5.0",
+    "mammoth": "1.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
