--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "docx": "8.5.0",
-    "mammoth": "1.6.0"
+    "mammoth": "1.6.0",
+    "pptxgenjs": "3.12.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
